--- a/content/data/config.json
+++ b/content/data/config.json
@@ -2,7 +2,7 @@
     "title": "Stackbit DIY Theme",
     "path_prefix": "/",
     "layout_type": "full-width",
-    "style": "classic",
+    "style": "bold",
     "palette": "green",
     "mode": "light",
     "base_font": "serif",
